# ephemeral-flight-server

./: .envrc  README.md  draft  eda.py  ephemeral-server-demo.py  ephemeral-server-expr.py  ephemeral-server-into-backend-v2.py  ephemeral-server-into-backend.py  ephemeral-server-udf-exchange-demo.py  pyproject.toml  util.py
demo/: __init__.py  action.py  backend.py  bare.py  client.py  exchanger.py  server.py  utils.py
demo/tests/: test_bare.py  test_server.py
tests/: test_demo.py
tls/: server.crt  server.key
