[project]
name = "flight-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.0",
    "duckdb>=1.1.3",
    "letsql>=0.1.11",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
test = [
    "datafusion>=43.1.0",
    "pytest>=8.3.4",
]
